<resources>
    <string name="app_name">SimpleTodo</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_hint">Add a new item</string>
    <string name="priority_label">Priority:</string>
    <string name="due_date_label">Due: </string>
    <string name="task_priority">HIGH</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="task_notes">Task Notes</string>
    <string name="priority">Priority Level</string>
    <string name="status">Status</string>
    <string name="quit_confirmation">Are you sure you want to cancel?</string>
    <string name="quit_title">Confirm cancellation</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="delete_title">Confirm delete</string>

    <string-array name="priority_array">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>

    <string-array name="status_array">
        <item>PENDING</item>
        <item>DONE</item>
    </string-array>
</resources>
