<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ViewItemActivity">

    <LinearLayout style="@style/LayoutStyle">

        <TextView
            style="@style/ViewItemText"
            android:text="@string/task_name" />

        <TextView
            android:id="@+id/txt_task_text_view"
            style="@style/AddItemDetailText" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LayoutStyle">

        <TextView
            style="@style/ViewItemText"
            android:text="@string/due_date" />

        <TextView
            android:id="@+id/txt_due_date"
            style="@style/AddItemDetailText" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LayoutStyle">

        <TextView
            style="@style/ViewItemText"
            android:text="@string/task_notes" />

        <TextView
            android:id="@+id/txt_task_note_view"
            style="@style/AddItemDetailText" />

    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LayoutStyle">

        <TextView
            style="@style/ViewItemText"
            android:text="@string/priority" />

        <TextView
            android:id="@+id/txt_priority"
            style="@style/AddItemDetailText" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/LayoutStyle">

        <TextView
            style="@style/ViewItemText"
            android:text="@string/status" />

        <TextView
            android:id="@+id/txt_status"
            style="@style/AddItemDetailText" />
    </LinearLayout>

    <View style="@style/Divider" />
</LinearLayout>
