<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.EditItemActivity">

    <TextView
        android:id="@+id/txt_text_label"
        style="@style/AddItemText"
        android:layout_alignParentTop="true"
        android:text="@string/task_name" />

    <EditText
        android:id="@+id/txt_task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txt_text_label" />

    <View
        android:id="@+id/div1"
        style="@style/Divider"
        android:layout_below="@id/txt_task_text" />

    <TextView
        android:id="@+id/txt_due_date"
        style="@style/AddItemText"
        android:layout_below="@id/div1"
        android:text="@string/due_date" />

    <DatePicker
        android:id="@+id/priority_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/div1"
        android:layout_toRightOf="@id/txt_due_date"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"></DatePicker>

    <View
        android:id="@+id/div2"
        style="@style/Divider"
        android:layout_below="@id/priority_date_picker" />

    <TextView
        android:id="@+id/txt_task_note_label"
        style="@style/AddItemText"
        android:layout_below="@id/div2"
        android:text="@string/task_notes" />

    <EditText
        android:id="@+id/txt_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/div2"
        android:layout_toRightOf="@+id/txt_task_note_label" />

    <View
        android:id="@+id/div3"
        style="@style/Divider"
        android:layout_below="@id/txt_task_note" />

    <TextView
        android:id="@+id/txt_priority"
        style="@style/AddItemText"
        android:layout_below="@id/div3"
        android:text="@string/priority" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div3"
        android:layout_toRightOf="@id/txt_priority"
        android:entries="@array/priority_array" />

    <View
        android:id="@+id/div4"
        style="@style/Divider"
        android:layout_below="@id/txt_priority" />

    <TextView
        android:id="@+id/txt_status"
        style="@style/AddItemText"
        android:layout_below="@id/div4"
        android:text="@string/status" />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div4"
        android:layout_toRightOf="@id/txt_status"
        android:entries="@array/status_array" />
</RelativeLayout>